@@ -57,6 +57,7 @@ fi
 ISABELLE_FONTS=""
 ISABELLE_FONTS_HIDDEN=""
 ISABELLE_SCALA_SERVICES=""
+ISABELLE_DIRECTORIES=""
 
 #main executables
 ISABELLE_TOOL="$ISABELLE_HOME/bin/isabelle"
